<resources>
    <string name="app_name">Pages</string>
    <string name="signup">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone No</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="account">Have an account ?</string>
    <string name="signin">Sign in</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password?</string>
    <string name="remember">Remember me</string>
    <string name="or">OR</string>
    <string name="signin_with">Sign in with</string>
</resources>